# ObjParser

./: CMakeLists.txt
src/: line_bufferer.cpp  line_bufferer.hpp  obj_content.cpp  obj_content.hpp  obj_line_buffer_processor.cpp  obj_line_buffer_processor.hpp
src/elements/: face.cpp  face.hpp  vertex_reference.cpp  vertex_reference.hpp
src/vertex_data/: geometric_vertex.cpp  geometric_vertex.hpp  texture_vertex.cpp  texture_vertex.hpp  vertex_data.hpp  vertex_normal.cpp  vertex_normal.hpp
tests/: CMakeLists.txt  test.cpp
